@@ -4,7 +4,11 @@ include/Yap/YapInterface.h
 include/Yap/c_interface.h
 include/Yap/yap_structs.h
 lib/Yap/random.so
+lib/Yap/regcomp.so
+lib/Yap/regerror.so
+lib/Yap/regexec.so
 lib/Yap/regexp.so
+lib/Yap/regfree.so
 lib/Yap/startup
 lib/Yap/sys.so
 lib/Yap/yap2swi.so
@@ -76,6 +80,19 @@ share/Yap/chr/sbag_a.pl
 share/Yap/chr/sbag_l.pl
 share/Yap/chr/trace.yap
 share/Yap/cleanup.yap
+share/Yap/clpbn.yap
+share/Yap/clpbn/aggregates.yap
+share/Yap/clpbn/bnt.yap
+share/Yap/clpbn/discrete_utils.yap
+share/Yap/clpbn/evidence.yap
+share/Yap/clpbn/gibbs.yap
+share/Yap/clpbn/graphs.yap
+share/Yap/clpbn/graphviz.yap
+share/Yap/clpbn/topsort.yap
+share/Yap/clpbn/utils.yap
+share/Yap/clpbn/vel.yap
+share/Yap/clpbn/viterbi.yap
+share/Yap/clpbn/xbif.yap
 share/Yap/clpq.yap
 share/Yap/clpq/arith_q.yap
 share/Yap/clpq/class.yap
@@ -177,28 +194,66 @@ share/Yap/icon_address.pl
 share/Yap/lists.yap
 share/Yap/logtalk.yap
 share/Yap/logtalk/logtalk.pl
-share/Yap/logtalk/yap430.config
+share/Yap/logtalk/yap.config
 share/Yap/ordsets.yap
 share/Yap/pillow.pl
+share/Yap/pl/arith.yap
+share/Yap/pl/arrays.yap
+share/Yap/pl/boot.yap
+share/Yap/pl/callcount.yap
+share/Yap/pl/checker.yap
+share/Yap/pl/consult.yap
+share/Yap/pl/corout.yap
+share/Yap/pl/debug.yap
+share/Yap/pl/depth_bound.yap
+share/Yap/pl/directives.yap
+share/Yap/pl/errors.yap
+share/Yap/pl/grammar.yap
+share/Yap/pl/ground.yap
+share/Yap/pl/init.yap
+share/Yap/pl/listing.yap
+share/Yap/pl/load_foreign.yap
+share/Yap/pl/modules.yap
+share/Yap/pl/preds.yap
+share/Yap/pl/profile.yap
+share/Yap/pl/protect.yap
+share/Yap/pl/setof.yap
+share/Yap/pl/signals.yap
+share/Yap/pl/sockets.yap
+share/Yap/pl/sort.yap
+share/Yap/pl/statistics.yap
+share/Yap/pl/strict_iso.yap
+share/Yap/pl/tabling.yap
+share/Yap/pl/threads.yap
+share/Yap/pl/utils.yap
+share/Yap/pl/yapor.yap
+share/Yap/pl/yio.yap
 share/Yap/prandom.yap
 share/Yap/queues.yap
 share/Yap/random.yap
+share/Yap/rbtrees.yap
 share/Yap/regexp.yap
+share/Yap/splay.yap
+share/Yap/swi.yap
 share/Yap/system.yap
 share/Yap/terms.yap
 share/Yap/timeout.yap
 share/Yap/trees.yap
 share/Yap/tries.yap
 share/Yap/ugraphs.yap
-@dirrm share/Yap/logtalk
-@dirrm share/Yap/clpr
-@dirrm share/Yap/clpqr/examples/monash
-@dirrm share/Yap/clpqr/examples/SESSION
-@dirrm share/Yap/clpqr/examples
-@dirrm share/Yap/clpqr
-@dirrm share/Yap/clpq
-@dirrm share/Yap/chr/examples
-@dirrm share/Yap/chr
-@dirrm share/Yap
-@dirrm lib/Yap
+share/Yap/ypp.yap
 @dirrm include/Yap
+@dirrm lib/Yap
+@dirrm share/Yap
+@dirrm share/Yap/chr
+@dirrm share/Yap/chr/examples
+@dirrm share/Yap/clpbn
+@dirrm share/Yap/clpbn/examples
+@dirrm share/Yap/clpq
+@dirrm share/Yap/clpqr
+@dirrm share/Yap/clpqr/examples
+@dirrm share/Yap/clpqr/examples/SESSION
+@dirrm share/Yap/clpqr/examples/monash
+@dirrm share/Yap/clpr
+@dirrm share/Yap/logtalk
+@dirrm share/Yap/pl
